[package]
authors = [
  "Cameron Eldridge <cameldridge@gmail.com>",
  "Andre Ha <andre.oikawa@hotmail.com>",
  "Terrence Chan <contact@terrencejchan.com>",
  "Ian Lai <ianlaiuw@gmail.com>",
]
edition = "2018"
name = "house-makes-game-rs"
version = "0.1.0"

[dependencies]
paw = "1.0.0"
structopt = { version = "0.3.1", features = ["paw"] }
text_io = "0.1.7"
