[package]
authors = ["Cameron Eldridge <cameldridge@gmail.com>", "Andre Ha <andre.oikawa@hotmail.com>", "Terrence Chan <contact@terrencejchan.com>", "Ian Lai <ianlaiuw@gmail.com>"]
edition = "2018"
name = "house-makes-game-rs"
version = "0.1.0"
[dependencies]
paw = "1.0.0"
text_io = "0.1.7"
winit = "0.20.0-alpha3"

[dependencies.structopt]
features = ["paw"]
version = "0.3.1"
